telegram added on contact list
