# lib/api-spec/openapi.yaml
@@ -335,6 +335,9 @@ components:
         phone:
           type: string
           nullable: true
+        telegram:
+          type: string
+          nullable: true
         linkedin:
           type: string
           nullable: true
@@ -373,6 +376,7 @@ components:
         - birthday
         - email
         - phone
+        - telegram
         - linkedin
         - twitter
         - instagram
@@ -410,6 +414,9 @@ components:
           type: string
           nullable: true
         phone:
+          type: string
+          nullable: true
+        telegram:
           type: string
           nullable: true
         linkedin:
